Update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,13 @@
+allow_remote_control yes
 
 ##
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
 # font_family         Inconsolata SemiExpanded SemiBold
-font_family         Source Code Pro Semibold
-font_size           14
+# font_family         Source Code Pro Semibold
+font_family         SauceCodePro Nerd Font Mono Semibold
+font_size           18
 adjust_line_height  115%
 adjust_column_width 100%
 
@@ -25,7 +27,7 @@ enabled_layouts tall,horizontal,vertical,splits,grid,stack
 #
 scrollback_lines 8192
 
-map f1 launch --type=tab --title scrollback-buf-nvim --stdin-source=@screen_scrollback vim -
+map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback vim -
 map f2 launch --stdin-source=@screen_scrollback less -R
 
 
@@ -43,14 +45,47 @@ map ctrl+alt+h previous_tab
 map ctrl+alt+l next_tab
 
 ##
+# For some reason, on macos ctrl+shift+escape is not oppening
+# kitty shell. Tried cmd+escape too without success.
+#
+map cmd+shift+s kitty_shell window
+
+##
+# Reload config.
+#
+# NOTE: No visual feedback is given. Reload the file and try the thing
+# you configured. Also note that not all configs con be reloaded without
+# a full kitty restart.
+#
+map cmd+shift+r load_config_file
+
+##
+# Clear buffer _and_ redraw the prompt.
+#
+# • https://github.com/kovidgoyal/kitty/issues/747
+#
+map cmd+k combine : clear_terminal scrollback active : send_text normal \x0c
+
+##
 # Resizing windows.
+#
+# For some reason, ctrl+<arrows> do not work on mac (same as with
+# ctrl+shift+esc for openning the kitty shell). ctrl+shift+<arrows>
+# to work though.
 #
 # https://sw.kovidgoyal.net/kitty/layouts.html#resizing-windows
 #
 map ctrl+left resize_window narrower
+map ctrl+shift+left resize_window narrower
+
 map ctrl+right resize_window wider
+map ctrl+shift+right resize_window wider
+
 map ctrl+up resize_window taller
+map ctrl+shift+up resize_window taller
+
 map ctrl+down resize_window shorter
+map ctrl+shift+down resize_window shorter
 
 ##
 # Navigate to tabs with Alt+N.
@@ -68,10 +103,10 @@ map alt+9 goto_tab 9
 ########################################################################
 # Theme
 #
-include ./kitty-themes/themes/gruvbox_dark.conf
-# # include ./kitty-themes/themes/gruvbox_light.conf
+# include ./kitty-themes/themes/gruvbox_dark.conf
+# include ./kitty-themes/themes/gruvbox_light.conf
 # include ./kitty-themes/themes/Solarized_Light.conf
-
+#
 
 ##
 # Solarized Light
