Update tmux undercurl settings

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -94,6 +94,12 @@ bind-key M-k \
 bind-key C-y set-window-option synchronize-panes \; \
   display-message " synchronize-panes toggled "
 
+##
+# Settings for undercurls
+#
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # vim: set tw=72:
 
