Allow alt+<key> for Kitty on MacOS

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,6 +30,14 @@ scrollback_lines 8192
 map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback vim -
 map f2 launch --stdin-source=@screen_scrollback less -R
 
+##
+# • https://sw.kovidgoyal.net/kitty/conf/?highlight=macos_option_as_alt#opt-kitty.macos_option_as_alt
+#
+# So I can do `alt+f` and `alt+b` on the command line when bash is using
+# emacs keybindings style (`set -o emacs`) instead of vi keybindings
+# style (`set -o vi`).
+#
+macos_option_as_alt left
 
 ########################################################################
 # Maps
