Update kitty tab bar style

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,6 +23,26 @@ window_padding_width 1
 enabled_layouts tall,horizontal,vertical,splits,grid,stack
 
 ##
+# Tab Bar
+#
+# • https://sw.kovidgoyal.net/kitty/conf/#tab-bar
+#
+# For some reason, tab_activity_symbol displays a symbol when vim is
+# open in a tab and some other window (like the browser) is in the
+# foreground.
+#
+# tab_activity_symbol 
+tab_bar_edge bottom
+tab_bar_style fade
+tab_title_template "{index}:{title}"
+active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
+
+##
 # Scrollback Lines
 #
 scrollback_lines 8192
