Make kitty and less work together to display colors
Currently, even using -R or --RAW-CONTROL-CHARS is not enough to make
less display content in colors. Found out that we also need
--stdin-add-formatting.

Try with tree -CF <path>, and if the output has colors, then f2
should open less and the colors should be present.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -47,8 +47,15 @@ inactive_tab_font_style normal
 #
 scrollback_lines 8192
 
+##
+# Open the scrollback in vim, on a new tab.
+#
 map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback vim -
-map f2 launch --stdin-source=@screen_scrollback less -R
+
+##
+# Open the scrollback in less, retaining colors! Hurray!! 🧡
+#
+map f2 launch --stdin-source=@screen_scrollback --stdin-add-formatting less --RAW-CONTROL-CHARS --IGNORE-CASE
 
 ##
 # • https://sw.kovidgoyal.net/kitty/conf/?highlight=macos_option_as_alt#opt-kitty.macos_option_as_alt
