Change kitty scrollback buffer to overlay

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -34,7 +34,8 @@ enabled_layouts tall,horizontal,vertical,splits,grid,stack
 # tab_activity_symbol 
 tab_bar_edge bottom
 tab_bar_style fade
-tab_title_template "{index}:{title}"
+tab_title_template "{index}:{title} "
+active_tab_title_template "{index}:{title} 𝝺"
 active_tab_foreground   #000
 active_tab_background   #eee
 active_tab_font_style   bold
@@ -55,7 +56,7 @@ map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback vi
 ##
 # Open the scrollback in less, retaining colors! Hurray!! 🧡
 #
-map f2 launch --stdin-source=@screen_scrollback --stdin-add-formatting less --RAW-CONTROL-CHARS --IGNORE-CASE
+map f2 launch --type=overlay --stdin-source=@screen_scrollback --stdin-add-formatting less --RAW-CONTROL-CHARS --IGNORE-CASE
 
 ##
 # • https://sw.kovidgoyal.net/kitty/conf/?highlight=macos_option_as_alt#opt-kitty.macos_option_as_alt
