--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,12 +4,17 @@ allow_remote_control yes
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
-# font_family         Inconsolata SemiExpanded SemiBold
+# On kitty, run:
+#
+#   $ kitty list-fonts
+#
+# font_family        6Inconsolata SemiExpanded SemiBold
 # font_family         Source Code Pro Semibold
-font_family         SauceCodePro Nerd Font Mono Semibold
-font_size           18
-adjust_line_height  115%
-adjust_column_width 100%
+# font_family         SauceCodePro Nerd Font Mono Semibold
+font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
+font_size           14
+adjust_line_height  105%
+adjust_column_width 110%
 
 cursor_blink_interval   0
 enable_audio_bell no
