kitty: Add reload config keybindings for Linux

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -100,6 +100,8 @@ map ctrl+shift+esc kitty_shell window
 # a full kitty restart.
 #
 map cmd+shift+r load_config_file
+map windows+shift+r load_config_file
+map ctrl+shift+l load_config_file
 
 ##
 # Clear buffer _and_ redraw the prompt.
