--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -144,6 +144,13 @@ map alt+7 goto_tab 7
 map alt+8 goto_tab 8
 map alt+9 goto_tab 9
 
+##
+# Shell
+#
+# • https://sw.kovidgoyal.net/kitty/conf/?highlight=login%20shell#opt-kitty.shell
+#
+shell .
+
 ########################################################################
 # Theme
 #
