kitty: Document default shell and reading of rc files

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -147,7 +147,14 @@ map alt+9 goto_tab 9
 ##
 # Shell
 #
-# • https://sw.kovidgoyal.net/kitty/conf/?highlight=login%20shell#opt-kitty.shell
+# • https://sw.kovidgoyal.net/kitty/conf/?=login%20shell#opt-kitty.shell
+#
+# It seems even on macOS kitty is reading bash rc files on startup
+# without the need for `--login' and `--interactive'. Also, the docs say
+# that “if we change this, we might need `--login' and `--interactive'.
+# Tried adding those options with the default `shell .' and got an
+# error. So, we can only add those options explicitly if we change the
+# default `shell .' to something else, it seems.
 #
 shell .
 
