kitty: Change font on macOS
Sauce (Source) Code Pro names seem to differ between Linux and macOS.
For now, using one that works on macOS and then have to see if it also
works on Linux.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,8 +11,22 @@ allow_remote_control yes
 # font_family        6Inconsolata SemiExpanded SemiBold
 # font_family         Source Code Pro Semibold
 # font_family         SauceCodePro Nerd Font Mono Semibold
-font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
-font_size           14
+
+##
+# This works on Linux, but not on macOS.
+#
+# font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
+
+##
+# On macOS:
+#
+#   $ brew tap hombrew/cask-fonts
+#   $ brew search nerd-font
+#   $ brew install --cask font-sauce-code-pro-nerd-font
+#
+font_family         SauceCodePro Nerd Font Mono Semibold
+
+font_size           18
 adjust_line_height  105%
 adjust_column_width 110%
 
