--- a/.csirc
+++ b/.csirc
@@ -18,9 +18,9 @@
 ;;   `chicken-install -s readline`
 ;;
 
-(use readline)
-(current-input-port (make-readline-port))
-(install-history-file #f "/.csi.history")
+; (use readline)
+; (current-input-port (make-readline-port))
+; (install-history-file #f "/.csi.history")
 
 ;; vim: set filetype=scheme:
 
