chore: Update paths to ~/work/src/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,20 +11,20 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 #
 # set -g @plugin 'jimeh/tmux-themepack'
 
-source-file ~/Projects/dotfiles/tmux/shared-config.conf
+source-file ~/work/src/dotfiles/tmux/shared-config.conf
 
 # set -g @themepack 'powerline/default/yellow'
 
 #
 # Allows tmux to be started either in dark or light mode. Example:
 #
-#   $ THEME=light tmux new-session -s dotfiles -c ~/Projects/dotfiles
+#   $ THEME=light tmux new-session -s dotfiles -c ~/work/src/dotfiles
 #
 #   $ THEME=dark tmux new-session -s playground
 #
 if-shell '[ "$THEME" = dark ]' \
-    'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
-    'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
+    'source-file ~/work/src/dotfiles/tmux/themes/tmux-dark.conf' \
+    'source-file ~/work/src/dotfiles/tmux/themes/tmux-light.conf'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
