tmux: Increase status-left-length
Make more room for the status-left-length so that longer session names
dot not get cut off.

--- a/tmux/themes/tmux-dark.conf
+++ b/tmux/themes/tmux-dark.conf
@@ -60,7 +60,12 @@ set -g status-style dim,bg=colour234,fg=colour137
 set -g status-left '#[fg=colour226]#[bg=colour235]  « #S » #[bg=cyan]#[fg=colour8]'
 set -g status-right '#[fg=colour234,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S  '
 set -g status-right-length 50
-set -g status-left-length 25
+
+##
+# It will use at most 40, but will shrink back to the minimum
+# necessary to fit the text.
+#
+set -g status-left-length 40
 
 setw -g window-status-current-style bg=colour238,fg=colour81,bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
