--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -73,7 +73,13 @@ set -g status-style dim,bg='#eceaad',fg='#555555'
 set -g status-right 'λ Be Awesome! λ -- %H:%M:%S  '
 set -g status-right-style dim,bg='#eceaad',fg='#555555'
 set -g status-left '  « #S » '
-set -g status-left-length 25
+
+##
+# It will use at most 40, but will shrink back to the minimum
+# necessary to fit the text.
+#
+set -g status-left-length 40
+
 set -g status-left-style fg=colour9
 
 set -g window-status-style fg='#555555'
