kitty: Add solarized and gruvbox themes
These are themes from other people that I copied and did some
modifications.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,11 +24,12 @@ allow_remote_control yes
 #   $ brew search nerd-font
 #   $ brew install --cask font-sauce-code-pro-nerd-font
 #
-font_family         SauceCodePro Nerd Font Mono Semibold
+# font_family         SauceCodePro Nerd Font Mono Semibold
+font_family Sauce Code Pro Semibold Nerd Font Complete Mono
 
-font_size           16
+font_size           13
 adjust_line_height  100%
-adjust_column_width 100%
+adjust_column_width 110%
 
 cursor_blink_interval   0
 enable_audio_bell no
@@ -172,58 +173,7 @@ map alt+9 goto_tab 9
 #
 shell .
 
-########################################################################
-# Theme
-#
-# include ./kitty-themes/themes/gruvbox_dark.conf
-# include ./kitty-themes/themes/gruvbox_light.conf
-# include ./kitty-themes/themes/Solarized_Light.conf
-#
-
-##
-# Solarized Light
-# ===============
-#
-# Looks like the imported Solarized_Light from kitty-themes is acting
-# out. It does not work with Vim Solarized Light and produces a dark
-# background instead. Very strange indeed.
-#
-# References:
-#
-# • https://github.com/kovidgoyal/kitty/issues/897#issuecomment-419220650
-# • https://github.com/dexpota/kitty-themes/issues/44 (my issue)
-#
-
-background #fdf6e3
-foreground #657b83
-
-cursor     #586e75
-selection_background #475b62
-selection_foreground #eae3cb
-
-color0  #073642
-color8  #002b36
-
-color1  #dc322f
-color9  #cb4b16
-
-color2  #859900
-color10 #586e75
-
-color3  #b58900
-color11 #657b83
-
-color4  #268bd2
-color12 #839496
-
-color5  #d33682
-color13 #6c71c4
-
-color6  #2aa198
-color14 #93a1a1
-
-color7  #eee8d5
-color15 #fdf6e3
+include themes/gruvbox/gruvbox_dark_soft.conf
 
 # vim: set tw=72:
 
