kitty: Update gruvbox dark colors

--- a/.config/kitty/themes/gruvbox/gruvbox_dark.conf
+++ b/.config/kitty/themes/gruvbox/gruvbox_dark.conf
@@ -17,8 +17,14 @@ selection_background    #ebdbb2
 color0                  #282828
 color8                  #7c6f64
 
-# red
-color1                  #cc241d
+####################################################################
+############################## RED #################################
+#
+# ‘color1’ is the used to highlight:
+#
+# • Changed and untracked files for `git status`;
+#
+color1                  #ea2b2b
 color9                  #fb4934
 
 # green
@@ -32,7 +38,7 @@ color11                 #fabd2f
 ####################################################################
 ############################## BLUE ################################
 #
-# ‘color4’ is the one used to highlight:
+# ‘color4’ is used to highlight:
 #
 # • Directories for the output of `ls --color=auto`.
 # • Directories for the output of `tree -C`.
