kitty: Add reset and clear terminal for Linux

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -124,6 +124,7 @@ map ctrl+shift+l load_config_file
 # • https://github.com/kovidgoyal/kitty/issues/747
 #
 map cmd+k combine : clear_terminal scrollback active : send_text normal \x0c
+map ctrl+shift+k combine : clear_terminal scrollback active : send_text normal \x0c
 
 ##
 # Resizing windows.
