--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -42,8 +42,19 @@ bind-key -n M-0 select-window -t 10
 #
 # https://github.com/tmux/tmux/wiki/FAQ
 #
-set -g default-terminal tmux-256color
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm,*256color:Tc'
+# set -g default-terminal tmux-256color
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm,*256color:Tc'
+
+set -g default-terminal "${TERM}"
+##
+# Undercurl support.
+#
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+
+##
+# Underscore Colours - needs tmux-3.0.
+#
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 set -g history-limit 20000
 set -g mouse on
