kitty: Add splits layout with keybindings

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -40,7 +40,9 @@ draw_minimal_borders no
 window_margin_width 1
 window_padding_width 1
 
-enabled_layouts tall,horizontal,vertical,splits,grid,stack
+# enabled_layouts tall,horizontal,vertical,splits,grid,stack,splits:split_axis=horizontal
+enabled_layouts splits:split_axis=horizontal
+
 
 ##
 # Tab Bar
@@ -116,7 +118,30 @@ map ctrl+shift+esc kitty_shell window
 #
 map cmd+shift+r load_config_file
 map windows+shift+r load_config_file
-map ctrl+shift+l load_config_file
+map ctrl+alt+shift+l load_config_file
+
+##
+# https://sw.kovidgoyal.net/kitty/conf/#shortcut-kitty.Next-layout
+#
+# Use ctrl+shift+l to load next layout.
+#
+
+##
+# https://sw.kovidgoyal.net/kitty/layouts/#the-splits-layout
+#
+map F5 launch --location=hsplit
+map F6 launch --location=vsplit
+map F7 layout_action rotate
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
 
 ##
 # Clear buffer _and_ redraw the prompt.
