kitty: Open splits in the same directory of current window

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -129,8 +129,8 @@ map ctrl+alt+shift+l load_config_file
 ##
 # https://sw.kovidgoyal.net/kitty/layouts/#the-splits-layout
 #
-map F5 launch --location=hsplit
-map F6 launch --location=vsplit
+map F5 launch --cwd=current --location=hsplit
+map F6 launch --cwd=current --location=vsplit
 map F7 layout_action rotate
 
 map shift+up move_window up
