--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,12 +24,12 @@ allow_remote_control yes
 #   $ brew search nerd-font
 #   $ brew install --cask font-sauce-code-pro-nerd-font
 #
-# font_family         SauceCodePro Nerd Font Mono Semibold
-font_family Sauce Code Pro Semibold Nerd Font Complete Mono
+font_family         SauceCodePro Nerd Font Mono Semibold
+# font_family Sauce Code Pro Semibold Nerd Font Complete Mono
 
 font_size           13
 adjust_line_height  100%
-adjust_column_width 110%
+adjust_column_width 105%
 
 cursor_blink_interval   0
 enable_audio_bell no
