--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = nvim -c 'set spell spelllang=en'
+	editor = vim -c 'set spell spelllang=en'
 	autocrlf = input
 [alias]
 	st = status
