--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,11 @@ bash_incl/workprojs.sh
 #
 .config/nvim/plugin
 
+#
+# Old nvim configs. Do away with this once my new setup
+# is complete.
+#
+.config/nvim-bkp
+
 # vim: set tw=68:
 
