nvim: Add lua/nvim json file to gitignore

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,47 +1,32 @@
-# GruvboxMaterial theme by sainnhe
-# License: [MIT License](https://opensource.org/licenses/MIT).
+## name: Gruvbox Light Hard
+## author: Pavel Pertsev
+## license: MIT/X11
+## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-light-hard.conf
 
-background #f9f5d7
-foreground #764e37
+selection_foreground    #3c3836
+selection_background    #d65d0e
 
-selection_background #764e37
-selection_foreground #f9f5d7
+background              #f9f5d7
+foreground              #3c3836
 
-active_tab_background   #f9f5d7
-active_tab_foreground   #764e37
-active_tab_font_style   bold-italic
-inactive_tab_background #f9f5d7
-inactive_tab_foreground #7c6f64
-inactive_tab_font_style normal
+color0                  #ebdbb2
+color1                  #cc241d
+color2                  #98971a
+color3                  #d79921
+color4                  #458588
+color5                  #b16286
+color6                  #689d6a
+color7                  #7c6f64
+color8                  #928374
+color9                  #9d0006
+color10                 #79740e
+color11                 #b57614
+color12                 #076678
+color13                 #8f3f71
+color14                 #427b58
+color15                 #282828
 
-# Black
-color0 #bdae93
-color8 #928374
+cursor                  #665c54
+cursor_text_color       #bdae93
 
-# Red
-color1 #c74545
-color9 #c74545
-
-# Green
-color2  #6c782e
-color10 #6c782e
-
-# Yellow
-color3  #c55b03
-color11 #b47109
-
-# Blue
-color4  #47747e
-color12 #47747e
-
-# Magenta
-color5  #945e80
-color13 #945e80
-
-# Cyan
-color6  #4c7a5d
-color14 #4c7a5d
-
-# White
-color7  #764e37
-color15 #764e37
+url_color               #458588
