--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -203,6 +203,6 @@ map alt+9 goto_tab 9
 shell .
 
 # BEGIN_KITTY_THEME
-# Gruvbox Material Light Hard
+# Gruvbox Light Hard
 include current-theme.conf
 # END_KITTY_THEME
