kitty: Update tab title templates
Remove the full directory path and make it show only the last element of
the path, as that is less annoying and more readable to me.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -59,8 +59,15 @@ enabled_layouts splits:split_axis=horizontal
 # tab_activity_symbol 
 tab_bar_edge bottom
 tab_bar_style fade
-tab_title_template "{index}:{title} "
-active_tab_title_template "{index}:{title} 𝝺"
+
+##
+# Tab titles
+#
+# • https://unix.stackexchange.com/questions/697699/kitty-terminal-tab-title-without-path
+#
+tab_title_template "{index}: {title[title.rfind('/') + 1:]} "
+active_tab_title_template "{index}: {title[title.rfind('/') + 1:]} 𝝺"
+
 # active_tab_foreground   #000
 # active_tab_background   #eee
 active_tab_font_style   bold
