kitty: Switch to gruvbox dark theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -210,6 +210,6 @@ map alt+9 goto_tab 9
 shell .
 
 # BEGIN_KITTY_THEME
-# Gruvbox Light Hard
+# Gruvbox Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
