--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,32 +1,33 @@
-## name: Gruvbox Light Hard
+## name: Gruvbox Dark Hard
 ## author: Pavel Pertsev
 ## license: MIT/X11
-## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-light-hard.conf
+## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark-hard.conf
 
-selection_foreground    #3c3836
+
+selection_foreground    #ebdbb2
 selection_background    #d65d0e
 
-background              #f9f5d7
-foreground              #3c3836
+background              #1d2021
+foreground              #ebdbb2
 
-color0                  #ebdbb2
+color0                  #3c3836
 color1                  #cc241d
 color2                  #98971a
 color3                  #d79921
 color4                  #458588
 color5                  #b16286
 color6                  #689d6a
-color7                  #7c6f64
+color7                  #a89984
 color8                  #928374
-color9                  #9d0006
-color10                 #79740e
-color11                 #b57614
-color12                 #076678
-color13                 #8f3f71
-color14                 #427b58
-color15                 #282828
+color9                  #fb4934
+color10                 #b8bb26
+color11                 #fabd2f
+color12                 #83a598
+color13                 #d3869b
+color14                 #8ec07c
+color15                 #fbf1c7
 
-cursor                  #665c54
-cursor_text_color       #bdae93
+cursor                  #bdae93
+cursor_text_color       #665c54
 
 url_color               #458588
