kitty: Change font to JetBrains

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,7 +28,9 @@ allow_remote_control yes
 #
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
-font_family Sauce Code Pro Semibold Nerd Font Complete Mono
+# font_family Sauce Code Pro Semibold Nerd Font Complete Mono
+# font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
+font_family JetBrainsMono NF SemiBold
 
 font_size           13
 adjust_line_height  100%
@@ -210,6 +212,6 @@ map alt+9 goto_tab 9
 shell .
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Hard
+# Gruvbox Light
 include current-theme.conf
 # END_KITTY_THEME
