kitty: Disable font ligatures

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,12 +29,12 @@ allow_remote_control yes
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family Sauce Code Pro Semibold Nerd Font Complete Mono
-# font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
-font_family JetBrainsMono NF SemiBold
+font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
+# font_family JetBrainsMono NF SemiBold
 
 font_size           13
-adjust_line_height  100%
-adjust_column_width 110%
+adjust_line_height  110%
+adjust_column_width 120%
 
 cursor_blink_interval   0
 enable_audio_bell no
@@ -100,6 +100,14 @@ map f2 launch --type=overlay --stdin-source=@screen_scrollback --stdin-add-forma
 # style (`set -o vi`).
 #
 macos_option_as_alt left
+
+##
+# I don't really like ligatures too much, and sometimes they cause
+# confusion, like writting `###` headings in Markdown, or `===` headings
+# in Asciidoc. Sometimes it also hurts understanding in a few other
+# situations too.
+#
+disable_ligatures always
 
 ########################################################################
 # Maps
