kitty: Add better tab colors

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -60,7 +60,8 @@ enabled_layouts splits:split_axis=horizontal
 #
 # tab_activity_symbol 
 tab_bar_edge bottom
-tab_bar_style fade
+tab_bar_style powerline
+tab_powerline_style round
 
 ##
 # Tab titles
@@ -70,11 +71,11 @@ tab_bar_style fade
 tab_title_template "{index}: {title[title.rfind('/') + 1:]} "
 active_tab_title_template "{index}: {title[title.rfind('/') + 1:]} 𝝺"
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #d65d0e
+active_tab_background   #f9f5d7
 active_tab_font_style   bold
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+inactive_tab_foreground #444
+inactive_tab_background #ebdbb2
 inactive_tab_font_style normal
 
 ##
@@ -220,6 +221,6 @@ map alt+9 goto_tab 9
 shell .
 
 # BEGIN_KITTY_THEME
-# Gruvbox Light
+# Gruvbox Light Hard
 include current-theme.conf
 # END_KITTY_THEME
