--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,13 +1,12 @@
-## name: Gruvbox Light
+## name: Gruvbox Light Hard
 ## author: Pavel Pertsev
 ## license: MIT/X11
-## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-light.conf
-
+## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-light-hard.conf
 
 selection_foreground    #3c3836
 selection_background    #d65d0e
 
-background              #fbf1c7
+background              #f9f5d7
 foreground              #3c3836
 
 color0                  #ebdbb2
