--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,11 +30,12 @@ allow_remote_control yes
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family Sauce Code Pro Semibold Nerd Font Complete Mono
 font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
+# font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family JetBrainsMono NF SemiBold
 
-font_size           13
+font_size           16
 adjust_line_height  110%
-adjust_column_width 110%
+adjust_column_width 105%
 
 cursor_blink_interval   0
 enable_audio_bell no
