kitty: Update theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,7 +33,7 @@ font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family JetBrainsMono NF SemiBold
 
-font_size           16
+font_size           13
 adjust_line_height  110%
 adjust_column_width 105%
 
@@ -221,7 +221,10 @@ map alt+9 goto_tab 9
 #
 shell .
 
+include my-solarized-light-hard.conf
+
 # BEGIN_KITTY_THEME
 # Gruvbox Light Hard
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
+
