kitty: Add Thoughtworks MacBook overrides

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -223,6 +223,16 @@ shell .
 
 include my-solarized-light-hard.conf
 
+##
+# Config overrides for Thougtworks MacBook
+#
+# See:
+#
+# • https://sw.kovidgoyal.net/kitty/conf/
+# • https://github.com/kovidgoyal/kitty/issues/811
+#
+include kitty-${HOSTNAME}.conf
+
 # BEGIN_KITTY_THEME
 # Gruvbox Light Hard
 # include current-theme.conf
