nvim: Update search-related hl groups

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -46,8 +46,8 @@ draw_minimal_borders no
 window_margin_width 0
 window_padding_width 8
 
-# enabled_layouts tall,horizontal,vertical,splits,grid,stack,splits:split_axis=horizontal
-enabled_layouts splits:split_axis=horizontal
+enabled_layouts tall,horizontal,vertical,splits,grid,stack,splits:split_axis=horizontal
+# enabled_layouts splits:split_axis=horizontal
 
 
 ##
