kitty: Update kitty fonts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,9 +29,11 @@ allow_remote_control yes
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family Sauce Code Pro Semibold Nerd Font Complete Mono
-font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
+# font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
-# font_family JetBrainsMono NF SemiBold
+font_family JetBrainsMono NF SemiBold
+# font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
+# font_family Ubuntu Mono
 
 font_size           13
 adjust_line_height  110%
@@ -46,8 +48,8 @@ draw_minimal_borders no
 window_margin_width 0
 window_padding_width 8
 
-enabled_layouts tall,horizontal,vertical,splits,grid,stack,splits:split_axis=horizontal
-# enabled_layouts splits:split_axis=horizontal
+# enabled_layouts tall,horizontal,vertical,splits,grid,stack,splits:split_axis=horizontal
+enabled_layouts splits:split_axis=horizontal
 
 
 ##
