kitty: Update font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,9 +29,9 @@ allow_remote_control yes
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family Sauce Code Pro Semibold Nerd Font Complete Mono
-# font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
+font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
-font_family JetBrainsMono NF SemiBold
+# font_family JetBrainsMono NF SemiBold
 # font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
 # font_family Ubuntu Mono
 
