--- a/.config/kitty/kitty-thoughtworks-macbook.local.conf
+++ b/.config/kitty/kitty-thoughtworks-macbook.local.conf
@@ -7,8 +7,9 @@
 # • https://github.com/kovidgoyal/kitty/issues/811
 #
 
-font_family CaskaydiaCove Nerd Font Mono Regular
+# font_family CaskaydiaCove Nerd Font Mono Regular
+font_family ProFont IIx Nerd Font Mono
 
-font_size           16
-adjust_line_height  110%
+font_size           15
+adjust_line_height  115%
 adjust_column_width 110%
