kitty: Update to sauce code pro on macos

--- a/.config/kitty/kitty-thoughtworks-macbook.local.conf
+++ b/.config/kitty/kitty-thoughtworks-macbook.local.conf
@@ -7,9 +7,10 @@
 # • https://github.com/kovidgoyal/kitty/issues/811
 #
 
+font_family SauceCodePro Nerd Font Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
-font_family ProFont IIx Nerd Font Mono
+# font_family ProFont IIx Nerd Font Mono
 
-font_size           15
-adjust_line_height  120%
-adjust_column_width 110%
+font_size           16
+adjust_column_width 105%
+adjust_line_height  100%
