--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,15 +28,15 @@ allow_remote_control yes
 #
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
-# font_family Sauce Code Pro Semibold Nerd Font Complete Mono
-font_family ProFontIIx Nerd Font Mono
+font_family Sauce Code Pro Semibold Nerd Font Complete Mono
+# font_family ProFontIIx Nerd Font Mono
 # font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family JetBrainsMono NF SemiBold
 # font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
 # font_family Ubuntu Mono
 
-font_size           12
+font_size           13
 adjust_line_height  105%
 adjust_column_width 105%
 
