--- a/.config/kitty/kitty-thoughtworks-macbook.local.conf
+++ b/.config/kitty/kitty-thoughtworks-macbook.local.conf
@@ -7,7 +7,12 @@
 # • https://github.com/kovidgoyal/kitty/issues/811
 #
 
-font_family SauceCodePro Nerd Font Mono SemiBold
+##
+# Check available fonts with:
+#
+# kitty +list-fonts
+#
+font_family SauceCodePro NFM SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family ProFont IIx Nerd Font Mono
 
