kitty: Update font on Linux

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,9 +26,10 @@ allow_remote_control yes
 #   $ brew search nerd-font
 #   $ brew install --cask font-sauce-code-pro-nerd-font
 #
+
 # font_family         SauceCodePro Nerd Font Mono Semibold
 # font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
-font_family Sauce Code Pro Semibold Nerd Font Complete Mono
+# font_family Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family ProFontIIx Nerd Font Mono
 # font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
@@ -36,8 +37,13 @@ font_family Sauce Code Pro Semibold Nerd Font Complete Mono
 # font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
 # font_family Ubuntu Mono
 
-font_size           13
-adjust_line_height  105%
+# font_family SauceCodePro NFM SemiBold
+font_family SauceCodePro NFM Bold
+# font_family UbuntuMono Nerd Font Bold
+# font_family JetBrainsMono NFM SemiBold
+
+font_size           12
+adjust_line_height  110%
 adjust_column_width 105%
 
 cursor_blink_interval   0
