--- a/.config/kitty/kitty-thoughtworks-macbook.local.conf
+++ b/.config/kitty/kitty-thoughtworks-macbook.local.conf
@@ -12,10 +12,10 @@
 #
 # kitty +list-fonts
 #
-font_family SauceCodePro NFM SemiBold
+font_family SauceCodePro Nerd Font SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family ProFont IIx Nerd Font Mono
 
 font_size           15
-adjust_column_width 105%
-adjust_line_height  105%
+adjust_column_width 115%
+adjust_line_height  110%
