kitty: Add Gitlab font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -38,7 +38,8 @@ allow_remote_control yes
 # font_family Ubuntu Mono
 
 # font_family SauceCodePro NFM SemiBold
-font_family SauceCodePro NFM Bold
+# font_family SauceCodePro NFM Bold
+font_family GitLab Mono Bold
 # font_family UbuntuMono Nerd Font Bold
 # font_family JetBrainsMono NFM SemiBold
 
