kitty: Add Monospice NF to config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -39,7 +39,9 @@ allow_remote_control yes
 
 # font_family SauceCodePro NFM SemiBold
 # font_family SauceCodePro NFM Bold
-font_family GitLab Mono Bold
+# font_family GitLab Mono Bold
+# font_family MonaspiceKr Nerd Font Mono
+font_family MonaspiceKr NFM Medium
 # font_family UbuntuMono Nerd Font Bold
 # font_family JetBrainsMono NFM SemiBold
 
