--- a/.config/kitty/kitty-thoughtworks-macbook.local.conf
+++ b/.config/kitty/kitty-thoughtworks-macbook.local.conf
@@ -12,11 +12,11 @@
 #
 # kitty +list-fonts
 #
-# font_family SauceCodePro Nerd Font SemiBold
+font_family SauceCodePro Nerd Font SemiBold
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family ProFont IIx Nerd Font Mono
-font_family MonaspiceKr Nerd Font Mono Medium
+# font_family MonaspiceKr Nerd Font Mono Medium
 
-font_size           15
+font_size           16
 adjust_column_width 105%
 adjust_line_height  110%
