--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -37,17 +37,17 @@ allow_remote_control yes
 # font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
 # font_family Ubuntu Mono
 
-# font_family SauceCodePro NFM SemiBold
+font_family SauceCodePro NFM SemiBold
 # font_family SauceCodePro NFM Bold
 # font_family GitLab Mono Bold
 # font_family MonaspiceKr Nerd Font Mono
-font_family MonaspiceKr NFM Medium
+# font_family MonaspiceKr NFM Medium
 # font_family UbuntuMono Nerd Font Bold
 # font_family JetBrainsMono NFM SemiBold
 
-font_size           12
-adjust_line_height  110%
-adjust_column_width 105%
+font_size           13
+adjust_line_height  105%
+adjust_column_width 115%
 
 cursor_blink_interval   0
 enable_audio_bell no
