kitty: Update theme to dark

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,13 +83,18 @@ tab_powerline_style round
 #
 tab_title_template "{index}: {title[title.rfind('/') + 1:]} "
 active_tab_title_template "{index}: {title[title.rfind('/') + 1:]} 𝝺"
+# active_tab_foreground   #d65d0e
+# active_tab_background   #f9f5d7
+# active_tab_font_style   bold
+# inactive_tab_foreground #444
+# inactive_tab_background #ebdbb2
+# inactive_tab_font_style normal
 
-active_tab_foreground   #d65d0e
-active_tab_background   #f9f5d7
-active_tab_font_style   bold
-inactive_tab_foreground #444
-inactive_tab_background #ebdbb2
-inactive_tab_font_style normal
+active_tab_background #333
+active_tab_foreground #d65d0e
+inactive_tab_background #555
+inactive_tab_foreground #ddd
+
 
 ##
 # Scrollback Lines
@@ -99,7 +104,7 @@ scrollback_lines 8192
 ##
 # Open the scrollback in vim, on a new tab.
 #
-map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback vim -
+map f1 launch --type=tab --title hsitbufvim --stdin-source=@screen_scrollback nvim -
 
 ##
 # Open the scrollback in less, retaining colors! Hurray!! 🧡
@@ -233,7 +238,7 @@ map alt+9 goto_tab 9
 #
 shell .
 
-include my-solarized-light-hard.conf
+# include my-solarized-light-hard.conf
 
 ##
 # Config overrides for Thougtworks MacBook
@@ -246,7 +251,7 @@ include my-solarized-light-hard.conf
 include kitty-${HOSTNAME}.conf
 
 # BEGIN_KITTY_THEME
-# Gruvbox Light Hard
-# include current-theme.conf
+# Gruvbox Material Dark Soft
+include current-theme.conf
 # END_KITTY_THEME
 
