--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,32 +1,47 @@
-## name: Gruvbox Light Hard
-## author: Pavel Pertsev
-## license: MIT/X11
-## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-light-hard.conf
+# vim:ft=kitty
+## name: Gruvbox Material Dark Soft
+## author: Sainnhe Park
+## license: MIT
+## upstream: https://raw.githubusercontent.com/rsaihe/gruvbox-material-kitty/main/colors/gruvbox-material-dark-soft.conf
+## blurb: A modified version of Gruvbox with softer contrasts
 
-selection_foreground    #3c3836
-selection_background    #d65d0e
+background #32302f
+foreground #d4be98
 
-background              #f9f5d7
-foreground              #3c3836
+selection_background #d4be98
+selection_foreground #32302f
 
-color0                  #ebdbb2
-color1                  #cc241d
-color2                  #98971a
-color3                  #d79921
-color4                  #458588
-color5                  #b16286
-color6                  #689d6a
-color7                  #7c6f64
-color8                  #928374
-color9                  #9d0006
-color10                 #79740e
-color11                 #b57614
-color12                 #076678
-color13                 #8f3f71
-color14                 #427b58
-color15                 #282828
+cursor #a89984
+cursor_text_color background
 
-cursor                  #665c54
-cursor_text_color       #bdae93
+# Black
+color0 #665c54
+color8 #928374
 
-url_color               #458588
+# Red
+color1 #ea6962
+color9 #ea6962
+
+# Green
+color2  #a9b665
+color10 #a9b665
+
+# Yellow
+color3  #e78a4e
+color11 #d8a657
+
+# Blue
+color4  #7daea3
+color12 #7daea3
+
+# Magenta
+color5  #d3869b
+color13 #d3869b
+
+# Cyan
+color6  #89b482
+color14 #89b482
+
+# White
+color7  #d4be98
+color15 #d4be98
