--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -94,6 +94,8 @@ active_tab_background #333
 active_tab_foreground #d65d0e
 inactive_tab_background #555
 inactive_tab_foreground #ddd
+active_border_color #3b6404
+inactive_border_color #444
 
 
 ##
