--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,19 +83,18 @@ tab_powerline_style round
 #
 tab_title_template "{index}: {title[title.rfind('/') + 1:]} "
 active_tab_title_template "{index}: {title[title.rfind('/') + 1:]} 𝝺"
-# active_tab_foreground   #d65d0e
-# active_tab_background   #f9f5d7
-# active_tab_font_style   bold
-# inactive_tab_foreground #444
-# inactive_tab_background #ebdbb2
-# inactive_tab_font_style normal
+active_tab_foreground   #d65d0e
+active_tab_background   #f9f5d7
+active_tab_font_style   bold
+inactive_tab_foreground #444
+inactive_tab_background #ebdbb2
 
-active_tab_background #333
-active_tab_foreground #d65d0e
-inactive_tab_background #555
-inactive_tab_foreground #ddd
-active_border_color #3b6404
-inactive_border_color #444
+# active_tab_background #333
+# active_tab_foreground #d65d0e
+# inactive_tab_background #555
+# inactive_tab_foreground #ddd
+# active_border_color #3b6404
+# inactive_border_color #444
 
 
 ##
@@ -253,7 +252,7 @@ shell .
 include kitty-${HOSTNAME}.conf
 
 # BEGIN_KITTY_THEME
-# Gruvbox Material Dark Soft
+# Gruvbox Material Light Medium
 include current-theme.conf
 # END_KITTY_THEME
 
