--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,19 +26,19 @@ allow_remote_control yes
 #   $ brew search nerd-font
 #   $ brew install --cask font-sauce-code-pro-nerd-font
 #
+# On Arch Linux:
+#
+#   $ pacman --sync --search nerd-fonts
+#   $ pacman --sync ttf-sourcecodepro-nerd
+#
+# List fonts on Linux and macOS:
+#
+#   $ kitty +list-fonts
+#
 
-# font_family         SauceCodePro Nerd Font Mono Semibold
-# font_family         Sauce Code Pro Semibold Nerd Font Complete Mono
-# font_family Sauce Code Pro Semibold Nerd Font Complete Mono
-# font_family ProFontIIx Nerd Font Mono
-# font_family Caskaydia Cove Nerd Font Complete Mono SemiBold
-# font_family CaskaydiaCove Nerd Font Mono Regular
-# font_family JetBrainsMono NF SemiBold
-# font_family Hurmit Medium Nerd Font Complete Mono Windows Compatible
-# font_family Ubuntu Mono
-
-font_family SauceCodePro NFM SemiBold
 # font_family SauceCodePro NFM Bold
+font_family SauceCodePro NFM SemiBold
+# font_family CaskaydiaCove NFM SemiBold
 # font_family GitLab Mono Bold
 # font_family MonaspiceKr Nerd Font Mono
 # font_family MonaspiceKr NFM Medium
@@ -47,7 +47,7 @@ font_family SauceCodePro NFM SemiBold
 
 font_size           12
 adjust_line_height  105%
-adjust_column_width 110%
+adjust_column_width 105%
 
 cursor_blink_interval   0
 enable_audio_bell no
