--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -35,9 +35,19 @@ allow_remote_control yes
 #
 #   $ kitty +list-fonts
 #
+# Can also run this to fine tune font config.
+#
+#   $ kitty +kitten choose_fonts
+#
+# Read more:
+#
+#   • https://sw.kovidgoyal.net/kitty/conf/#fonts
+#
+font_family      family='SauceCodePro Nerd Font Mono' postscript_name=SauceCodeProNFM-SemiBold
+bold_font        auto
+italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
+bold_italic_font auto
 
-# font_family SauceCodePro NFM Bold
-font_family SauceCodePro NFM SemiBold
 # font_family CaskaydiaCove NFM SemiBold
 # font_family GitLab Mono Bold
 # font_family MonaspiceKr Nerd Font Mono
