--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,9 +43,9 @@ allow_remote_control yes
 #
 #   • https://sw.kovidgoyal.net/kitty/conf/#fonts
 #
-font_family      family='SauceCodePro Nerd Font Mono' postscript_name=SauceCodeProNFM-SemiBold
+font_family      family='CaskaydiaMono Nerd Font Mono' style=SemiBold
 bold_font        auto
-italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
+italic_font      auto
 bold_italic_font auto
 
 # font_family CaskaydiaCove NFM SemiBold
@@ -56,8 +56,8 @@ bold_italic_font auto
 # font_family JetBrainsMono NFM SemiBold
 
 font_size           12
-adjust_line_height  105%
-adjust_column_width 105%
+adjust_line_height  110%
+adjust_column_width 117%
 
 cursor_blink_interval   0
 enable_audio_bell no
