kitty: Update font config work macbook config file

--- a/.config/kitty/indev.conf
+++ b/.config/kitty/indev.conf
@@ -12,7 +12,10 @@
 #
 # kitty +list-fonts
 #
-font_family SauceCodePro Nerd Font SemiBold
+font_family      family='SauceCodePro Nerd Font' postscript_name=SauceCodeProNF-SemiBold
+bold_font        auto
+italic_font      family='SauceCodePro Nerd Font' style='SemiBold Italic'
+bold_italic_font auto
 # font_family CaskaydiaCove Nerd Font Mono Regular
 # font_family ProFont IIx Nerd Font Mono
 # font_family MonaspiceKr Nerd Font Mono Medium
