kitty: Add os-specific configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -263,7 +263,7 @@ shell .
 # • https://sw.kovidgoyal.net/kitty/conf/
 # • https://github.com/kovidgoyal/kitty/issues/811
 #
-include kitty-${HOSTNAME}.conf
+include kitty.${OSFAMILY}.conf
 
 # BEGIN_KITTY_THEME
 # Gruvbox Material Light Medium
