--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,22 +1,5 @@
-#
-# Config overrides for Thougtworks MacBook
-#
-# See:
-#
-# • https://sw.kovidgoyal.net/kitty/conf/
-# • https://github.com/kovidgoyal/kitty/issues/811
-#
-
-##
-# Check available fonts with:
-#
-# kitty +list-fonts
-#
-font_family SauceCodePro Nerd Font SemiBold
-# font_family CaskaydiaCove Nerd Font Mono Regular
-# font_family ProFont IIx Nerd Font Mono
-# font_family MonaspiceKr Nerd Font Mono Medium
+family SauceCodePro Nerd Font SemiBold
 
 font_size           15
-adjust_column_width 110%
-adjust_line_height  110%
+adjust_column_width 100%
+adjust_line_height  100%
