kitty: Use bash as the shell on macOS

--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,5 +1,7 @@
 family SauceCodePro Nerd Font SemiBold
 
 font_size           15
-adjust_column_width 100%
+adjust_column_width 110%
 adjust_line_height  100%
+
+shell bash --login
