kitty: Use hurmit font on macOS

--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,4 +1,9 @@
-family SauceCodePro Nerd Font SemiBold
+# family SauceCodePro Nerd Font SemiBold
+
+font_family      family="Hurmit Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size           14
 adjust_column_width 110%
