--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -47,9 +47,14 @@ allow_remote_control yes
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-font_family      family='SauceCodePro Nerd Font Mono' style=SemiBold
+# font_family      family='SauceCodePro Nerd Font Mono' style=SemiBold
+# bold_font        auto
+# italic_font      family='SauceCodePro Nerd Font Mono' postscript_name=SauceCodeProNFM-SemiBoldItalic
+# bold_italic_font auto
+
+font_family      family="Hurmit Nerd Font"
 bold_font        auto
-italic_font      family='SauceCodePro Nerd Font Mono' postscript_name=SauceCodeProNFM-SemiBoldItalic
+italic_font      auto
 bold_italic_font auto
 
 # font_family CaskaydiaCove NFM SemiBold
