kitty(nvim): Use gruvbox hard light theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -271,7 +271,7 @@ shell .
 include kitty.${OSFAMILY}.conf
 
 # BEGIN_KITTY_THEME
-# Gruvbox Material Light Medium
+# Gruvbox Light Hard
 include current-theme.conf
 # END_KITTY_THEME
 
