kitty: Run bash with --login option

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -256,7 +256,7 @@ map alt+9 goto_tab 9
 # error. So, we can only add those options explicitly if we change the
 # default `shell .' to something else, it seems.
 #
-shell .
+shell bash --login
 
 # include my-solarized-light-hard.conf
 
