kitty: Switch to source code pro font on darwin

--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,12 +1,12 @@
 # family SauceCodePro Nerd Font SemiBold
 
-font_family      family="Hurmit Nerd Font Mono"
+font_family      family="SauceCodePro Nerd Font Mono"
 bold_font        auto
-italic_font      auto
+italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
 bold_italic_font auto
-
 font_size           14.5
-adjust_column_width 100%
-adjust_line_height  100%
+
+adjust_column_width 110%
+adjust_line_height  105%
 
 shell bash --login
