--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,12 +1,21 @@
 # family SauceCodePro Nerd Font SemiBold
 
-font_family      family="SauceCodePro Nerd Font Mono"
-bold_font        auto
-italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
-bold_italic_font auto
-font_size           14.5
+# font_family      family="SauceCodePro Nerd Font Mono"
+# bold_font        auto
+# italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
+# bold_italic_font auto
+# font_size           14.5
 
-adjust_column_width 110%
-adjust_line_height  105%
+##
+# https://github.com/Karmenzind/monaco-nerd-fonts
+#
+font_family      family="Monaco Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+font_size           15
+
+adjust_column_width 105%
+adjust_line_height  100%
 
 shell bash --login
