--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -1,10 +1,18 @@
 # family SauceCodePro Nerd Font SemiBold
 
-font_family      family="SauceCodePro Nerd Font Mono"
+# font_family      family="SauceCodePro Nerd Font Mono"
+# bold_font        auto
+# italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
+# bold_italic_font auto
+# font_size           14.5
+
+font_family      family="Hurmit Nerd Font Mono"
 bold_font        auto
-italic_font      family='SauceCodePro Nerd Font Mono' style='SemiBold Italic'
+italic_font      auto
 bold_italic_font auto
-font_size           14.5
+font_size        14.5
+adjust_column_width 110%
+adjust_line_height  110%
 
 ##
 # https://github.com/Karmenzind/monaco-nerd-fonts
@@ -15,7 +23,7 @@ font_size           14.5
 # bold_italic_font auto
 # font_size           15
 
-adjust_column_width 110%
-adjust_line_height  105%
+# adjust_column_width 110%
+# adjust_line_height  105%
 
 shell bash --login
