kitty: Use bold Hermit font on Linux

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,26 +43,10 @@ allow_remote_control yes
 #
 #   • https://sw.kovidgoyal.net/kitty/conf/#fonts
 #
-# font_family      family='CaskaydiaMono Nerd Font Mono' style=SemiBold
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
-# font_family      family='SauceCodePro Nerd Font Mono' style=SemiBold
-# bold_font        auto
-# italic_font      family='SauceCodePro Nerd Font Mono' postscript_name=SauceCodeProNFM-SemiBoldItalic
-# bold_italic_font auto
-
-font_family      family="Hurmit Nerd Font"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
-# font_family CaskaydiaCove NFM SemiBold
-# font_family GitLab Mono Bold
-# font_family MonaspiceKr Nerd Font Mono
-# font_family MonaspiceKr NFM Medium
-# font_family UbuntuMono Nerd Font Bold
-# font_family JetBrainsMono NFM SemiBold
+font_family      family='Hurmit Nerd Font Mono' style=Bold
+bold_font        family='Hurmit Nerd Font Mono' style=Bold
+italic_font      family='Hurmit Nerd Font Mono' style=Bold
+bold_italic_font family='Hurmit Nerd Font Mono' style=Bold
 
 font_size           12
 adjust_line_height  105%
