--- a/.config/kitty/kitty.darwin.conf
+++ b/.config/kitty/kitty.darwin.conf
@@ -9,13 +9,14 @@
 ##
 # https://github.com/Karmenzind/monaco-nerd-fonts
 #
-font_family      family="Monaco Nerd Font Mono"
+font_family      family="Hurmit Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
 font_size           15
 
 adjust_column_width 105%
 adjust_line_height  100%
 
-shell bash --login
+shell /opt/homebrew/bin/bash --login
